--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/react-modal": "^3.13.1",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "i": "^0.3.7",
+    "npm": "^8.5.4",
     "typescript": "4.6.2"
   }
 }
