--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-media": "^1.10.0",
     "react-modal": "^3.14.4",
     "sass": "^1.49.9"
   },
